// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should render 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render a bottom position 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-ocz1je-0 eWbA-DZ opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
      data-testid="dropdown__content"
      style="opacity: 100; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          class="block py-4 px-8 text-base font-semibold text-left whitespace-nowrap cursor-pointer text-theme-secondary-800 dark:text-theme-secondary-200 hover:bg-theme-secondary-200 dark:hover:bg-theme-primary-600 hover:text-theme-primary-600 dark:hover:text-theme-secondary-200"
          data-testid="dropdown__option--0"
        >
          <div
            class=""
          >
            <span>
              Option 1
            </span>
          </div>
        </li>
        <li
          class="block py-4 px-8 text-base font-semibold text-left whitespace-nowrap cursor-pointer text-theme-secondary-800 dark:text-theme-secondary-200 hover:bg-theme-secondary-200 dark:hover:bg-theme-primary-600 hover:text-theme-primary-600 dark:hover:text-theme-secondary-200"
          data-testid="dropdown__option--1"
        >
          <div
            class=""
          >
            <span>
              Option 2
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render a bottom-left position 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-ocz1je-0 gvgCKL opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
      data-testid="dropdown__content"
      style="opacity: 100; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          class="block py-4 px-8 text-base font-semibold text-left whitespace-nowrap cursor-pointer text-theme-secondary-800 dark:text-theme-secondary-200 hover:bg-theme-secondary-200 dark:hover:bg-theme-primary-600 hover:text-theme-primary-600 dark:hover:text-theme-secondary-200"
          data-testid="dropdown__option--0"
        >
          <div
            class=""
          >
            <span>
              Option 1
            </span>
          </div>
        </li>
        <li
          class="block py-4 px-8 text-base font-semibold text-left whitespace-nowrap cursor-pointer text-theme-secondary-800 dark:text-theme-secondary-200 hover:bg-theme-secondary-200 dark:hover:bg-theme-primary-600 hover:text-theme-primary-600 dark:hover:text-theme-secondary-200"
          data-testid="dropdown__option--1"
        >
          <div
            class=""
          >
            <span>
              Option 2
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render a large one 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdfBwQ caqoGN"
          height="30"
          width="30"
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render a left position 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-ocz1je-0 kaMLJx opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
      data-testid="dropdown__content"
      style="opacity: 100; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          class="block py-4 px-8 text-base font-semibold text-left whitespace-nowrap cursor-pointer text-theme-secondary-800 dark:text-theme-secondary-200 hover:bg-theme-secondary-200 dark:hover:bg-theme-primary-600 hover:text-theme-primary-600 dark:hover:text-theme-secondary-200"
          data-testid="dropdown__option--0"
        >
          <div
            class=""
          >
            <span>
              Option 1
            </span>
          </div>
        </li>
        <li
          class="block py-4 px-8 text-base font-semibold text-left whitespace-nowrap cursor-pointer text-theme-secondary-800 dark:text-theme-secondary-200 hover:bg-theme-secondary-200 dark:hover:bg-theme-primary-600 hover:text-theme-primary-600 dark:hover:text-theme-secondary-200"
          data-testid="dropdown__option--1"
        >
          <div
            class=""
          >
            <span>
              Option 2
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render a small one 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdfBwQ TENjd"
          height="10"
          width="10"
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render a top 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-ocz1je-0 jIaGuJ opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
      data-testid="dropdown__content"
      style="opacity: 100; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          class="block py-4 px-8 text-base font-semibold text-left whitespace-nowrap cursor-pointer text-theme-secondary-800 dark:text-theme-secondary-200 hover:bg-theme-secondary-200 dark:hover:bg-theme-primary-600 hover:text-theme-primary-600 dark:hover:text-theme-secondary-200"
          data-testid="dropdown__option--0"
        >
          <div
            class=""
          >
            <span>
              Option 1
            </span>
          </div>
        </li>
        <li
          class="block py-4 px-8 text-base font-semibold text-left whitespace-nowrap cursor-pointer text-theme-secondary-800 dark:text-theme-secondary-200 hover:bg-theme-secondary-200 dark:hover:bg-theme-primary-600 hover:text-theme-primary-600 dark:hover:text-theme-secondary-200"
          data-testid="dropdown__option--1"
        >
          <div
            class=""
          >
            <span>
              Option 2
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render a top-left position 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-ocz1je-0 fsyeNf opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
      data-testid="dropdown__content"
      style="opacity: 100; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          class="block py-4 px-8 text-base font-semibold text-left whitespace-nowrap cursor-pointer text-theme-secondary-800 dark:text-theme-secondary-200 hover:bg-theme-secondary-200 dark:hover:bg-theme-primary-600 hover:text-theme-primary-600 dark:hover:text-theme-secondary-200"
          data-testid="dropdown__option--0"
        >
          <div
            class=""
          >
            <span>
              Option 1
            </span>
          </div>
        </li>
        <li
          class="block py-4 px-8 text-base font-semibold text-left whitespace-nowrap cursor-pointer text-theme-secondary-800 dark:text-theme-secondary-200 hover:bg-theme-secondary-200 dark:hover:bg-theme-primary-600 hover:text-theme-primary-600 dark:hover:text-theme-secondary-200"
          data-testid="dropdown__option--1"
        >
          <div
            class=""
          >
            <span>
              Option 2
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render a top-right 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </span>
    <div
      class="Dropdown__Wrapper-ocz1je-0 eFLFDw opacity-0 mt-3 py-3 absolute z-10 rounded-lg shadow-xl "
      data-testid="dropdown__content"
      style="opacity: 100; height: -30px; overflow-y: scroll;"
    >
      <ul
        data-testid="dropdown__options"
      >
        <li
          class="block py-4 px-8 text-base font-semibold text-left whitespace-nowrap cursor-pointer text-theme-secondary-800 dark:text-theme-secondary-200 hover:bg-theme-secondary-200 dark:hover:bg-theme-primary-600 hover:text-theme-primary-600 dark:hover:text-theme-secondary-200"
          data-testid="dropdown__option--0"
        >
          <div
            class=""
          >
            <span>
              Option 1
            </span>
          </div>
        </li>
        <li
          class="block py-4 px-8 text-base font-semibold text-left whitespace-nowrap cursor-pointer text-theme-secondary-800 dark:text-theme-secondary-200 hover:bg-theme-secondary-200 dark:hover:bg-theme-primary-600 hover:text-theme-primary-600 dark:hover:text-theme-secondary-200"
          data-testid="dropdown__option--1"
        >
          <div
            class=""
          >
            <span>
              Option 2
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render toggle icon 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render with custom toggle content as function 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div>
        Dropdown is open: 
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render with custom toggle content as react element 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div>
        custom toggle
      </div>
    </span>
  </div>
</div>
`;

exports[`Dropdown should render with options 1`] = `
<div>
  <div
    class="relative"
  >
    <span
      data-testid="dropdown__toggle"
    >
      <div
        class="cursor-pointer outline-none focus:outline-none"
      >
        <div
          class="sc-bdfBwQ iyevwF"
          height="20"
          width="20"
        >
          <svg>
            settings.svg
          </svg>
        </div>
      </div>
    </span>
  </div>
</div>
`;
